--- a/RestBDDAutomationPack/RestBDDAutomationPack.csproj
+++ b/RestBDDAutomationPack/RestBDDAutomationPack.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="SpecFlow" Version="3.10.2-beta" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Steps\" />
+  </ItemGroup>
+
 </Project>
